examples/test/testpolicy19764.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19764
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key19: value48
      key25: value43
      key39: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value15
          key46: value36
          key28: value31
